--- a/_config.yml
+++ b/_config.yml
@@ -7,27 +7,6 @@ url: "https://benutzereinstweidrei.github.io/lagbw" # the base hostname & protoc
 # GitHub repository information
 repository: BenutzerEinsZweiDrei/lagbw
 
-# Build settings
-# theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
-
-# Plugins
 plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-  - jekyll-seo-tag
-
-# Navigation
-header_pages:
-  - about.md
-  - contact.md
-
-# Exclude from processing
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
+- jekyll-remote-theme # add this line to the plugins list if you already have one
